main/mozjs60: add -dbg subpkg

--- a/main/mozjs60/APKBUILD
+++ b/main/mozjs60/APKBUILD
@@ -3,14 +3,14 @@
 pkgname=mozjs60
 pkgver=60.9.0
 _majver=${pkgver%%.*}
-pkgrel=0
+pkgrel=1
 pkgdesc="standalone mozilla javascript engine"
 url="https://developer.mozilla.org/en-US/docs/Mozilla/Projects/SpiderMonkey/Releases/60"
 arch="all"
 license="MPL-2.0"
 depends_dev="icu-dev nspr-dev libffi-dev readline-dev"
 makedepends="$depends_dev zlib-dev python2 python2-dev perl sed autoconf2.13 linux-headers"
-subpackages="$pkgname-dev"
+subpackages="$pkgname-dev $pkgname-dbg"
 source="https://ftp.mozilla.org/pub/firefox/releases/${pkgver}esr/source/firefox-${pkgver}esr.source.tar.xz
 	0001-silence-sandbox-violations.patch
 	fix-musl-build.patch
