--- a/community/tracker/APKBUILD
+++ b/community/tracker/APKBUILD
@@ -27,7 +27,8 @@ subpackages="
 	$pkgname-doc
 	$pkgname-lang
 	lib$pkgname:libs
-	$pkgname-bash-completion:bashcomp:noarch"
+	$pkgname-bash-completion:bashcomp:noarch
+	$pkgname-dbg"
 source="https://download.gnome.org/sources/tracker/${pkgver%.*}/tracker-$pkgver.tar.xz"
 
 build() {
