community/gnome-shell: add -dbg subpkg

--- a/community/gnome-shell/APKBUILD
+++ b/community/gnome-shell/APKBUILD
@@ -53,7 +53,7 @@ checkdepends="
 	mesa-dri-swrast
 	gdm
 	"
-subpackages="$pkgname-lang $pkgname-doc"
+subpackages="$pkgname-lang $pkgname-doc $pkgname-dbg"
 source="https://download.gnome.org/sources/gnome-shell/${pkgver%.*}/gnome-shell-$pkgver.tar.xz"
 options="!check" # Tests have circular dependency 'gnome-shell <-> gdm'
 
