--- a/community/mutter/APKBUILD
+++ b/community/mutter/APKBUILD
@@ -15,7 +15,7 @@ makedepends="gnome-desktop-dev libcanberra-dev upower-dev json-glib-dev
 	gnome-settings-daemon-dev libice-dev libsm-dev startup-notification-dev
 	xorg-server"
 options="!check" # Can't be run with release builds
-subpackages="$pkgname-dev $pkgname-doc $pkgname-lang"
+subpackages="$pkgname-dev $pkgname-doc $pkgname-lang $pkgname-dbg"
 source="https://download.gnome.org/sources/mutter/${pkgver%.*}/mutter-$pkgver.tar.xz
 	fix-cogl-path-build-ordering.patch
 	fixudev-req.patch"
