--- a/community/namecoin/APKBUILD
+++ b/community/namecoin/APKBUILD
@@ -17,6 +17,7 @@ subpackages="$pkgname-dev $pkgname-qt $pkgname-cli $pkgname-tx $pkgname-tests $p
 source="$pkgname-$_ver.tar.gz::https://github.com/$pkgname/$pkgname-core/archive/nc${_ver}.tar.gz
 	skip-fs-test-utf8.patch
 	ssize_t.patch
+	boost-1.72.patch
 	$pkgname.initd
 	$pkgname.conf
 	"
@@ -91,5 +92,6 @@ dev() {
 sha512sums="5ce720b8fa52a0451a7444922453b0d3a3e01d8d1e39889cdfc341ac834c109e9a24749fb2269d141183e3b9b295d32eabfbdec0259376a699edd82aa5427a84  namecoin-0.18.1.tar.gz
 e9a1151af56dcef37720991452ab29fb2661166f2d755d5336ef606e6029a21b1a6d09b1a4da34955f0b97cd1a4febb19a8270e6f31f9fbbd271f19fe676468a  skip-fs-test-utf8.patch
 98aa5ad81bdb4ae961b791bc978c39117cdf2d83c2181f92bebbb0db107d9b6e86eda265fb3f93ff8a5ca8a7754d7148818b98095d57201dff9363d60b97e7dd  ssize_t.patch
+10e01c26b4e86412ff65bc1f5a8b6765e44d2e032440451130f2679eac431379c17784465574aebf169a61da08d60ff0ecb2d31bcc88943b4486cc2b621743fb  boost-1.72.patch
 1753132f349e02cc248a622eb17f2f98a180d561d46f2e8916b84cc26c98d546214ca305bb1ea378ae14090c0abf8d6ac257c98c6776bbe4dabd68c108f595a3  namecoin.initd
 3f92cb9a5f66d0e9e3792691b2e62b929c092030273bb87ebd9564e0c02196a5a9f69c458162f1b35099ac28e9b79b1c4035144b9d2dae4ad3e87d05a40d7ed4  namecoin.conf"
