--- a/community/openexr/APKBUILD
+++ b/community/openexr/APKBUILD
@@ -1,34 +1,36 @@
 # Contributor: Sören Tempel <soeren+alpine@soeren-tempel.net>
 # Maintainer: Mark Riedesel <mark+alpine@klowner.com>
 pkgname=openexr
-pkgver=2.2.1
-pkgrel=1
+pkgver=2.4.0
+pkgrel=0
 pkgdesc="A high dynamic-range image file format library"
 url="https://www.openexr.com/"
 arch="all"
 license="BSD"
 depends=""
-makedepends="ilmbase-dev zlib-dev"
+makedepends="zlib-dev cmake"
 subpackages="$pkgname-doc $pkgname-dev $pkgname-tools"
-source="http://download.savannah.nongnu.org/releases/openexr/${pkgname}-${pkgver}.tar.gz"
+source="$pkgname-$pkgver.tar.gz::https://github.com/AcademySoftwareFoundation/openexr/archive/v$pkgver.tar.gz"
 builddir="$srcdir/$pkgname-$pkgver"
 
 build() {
-	cd "$builddir"
-	./configure \
-		--build=$CBUILD \
-		--host=$CHOST \
-		--prefix=/usr \
-		--sysconfdir=/etc \
-		--mandir=/usr/share/man \
-		--localstatedir=/var \
-		--disable-static
+	mkdir -p build
+	cd build
+	cmake \
+		-DCMAKE_INSTALL_PREFIX=/usr \
+		-DCMAKE_INSTALL_LIBDIR=lib \
+		-DBUILD_SHARED_LIBS=True \
+		-DCMAKE_BUILD_TYPE=Release \
+		-DCMAKE_CXX_FLAGS="$CXXFLAGS" \
+		-DCMAKE_C_FLAGS="$CFLAGS" \
+		${CMAKE_CROSSOPTS} \
+		..
 	make
 }
 
 package() {
 	make DESTDIR="$pkgdir" \
-		-C "$builddir" install
+		-C "$builddir"/build install
 }
 
 tools() {
@@ -37,4 +39,4 @@ tools() {
 	mv "$pkgdir"/usr/bin "$subpkgdir"/usr/
 }
 
-sha512sums="192100c6ac47534f3a93c55327d2ab90b07a8265156855086b326184328c257dcde12991b3f3f1831e2df4226fe884adcfe481c2f02a157c715aee665e89a480  openexr-2.2.1.tar.gz"
+sha512sums="b544b1fc9d785cad029f35388894d1e9dae278dfda3c80d5615280386206f2af5c94b72c17e1e1d1514f73a7151b5be0f166a4be5b74abefc2f27fdf0500dfe8  openexr-2.4.0.tar.gz"
