main/squid: add secinfo

--- a/main/squid/APKBUILD
+++ b/main/squid/APKBUILD
@@ -34,6 +34,7 @@ options="!check"  # does not work. Error message is about "applet not found", so
 #     - CVE-2019-18679
 #   4.8-r0:
 #     - CVE-2019-13345
+#     - CVE-2019-12525
 #   3.5.27-r2:
 #     - CVE-2018-1000024
 #     - CVE-2018-1000027
