--- a/community/ranger/APKBUILD
+++ b/community/ranger/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
 # Maintainer: Leo <thinkabit.ukim@gmail.com>
 pkgname=ranger
-pkgver=1.9.2
-pkgrel=1
+pkgver=1.9.3
+pkgrel=0
 pkgdesc="VIM-inspired filemanager for the console"
 url="https://ranger.github.io/"
 arch="noarch"
@@ -11,7 +11,7 @@ depends="python3"
 makedepends="py3-setuptools"
 checkdepends="py3-pytest"
 subpackages="$pkgname-doc"
-source="$pkgname-$pkgver.tar.gz::https://github.com/ranger/ranger/archive/v${pkgver}.tar.gz"
+source="$pkgname-$pkgver.tar.gz::https://github.com/ranger/ranger/archive/v$pkgver.tar.gz"
 
 build() {
 	python3 setup.py build
@@ -28,4 +28,4 @@ package() {
 	install -Dm644 doc/rifle.1 "$pkgdir"/usr/share/man/man1/rifle.1
 }
 
-sha512sums="5eb4743beaf0478d745cce8e5bfc2ac07c98ab5784e9394772782d06c0bb27dcd5478ead191ac527f21cce76db09a51eb46db0fabc7993684a6b5aaec0d43104  ranger-1.9.2.tar.gz"
+sha512sums="5cd7bea714a6542d0a5445f5f0cf929b2df4377df3ef710f3786c6c46dd58b017a8060cde3969076637bfaac03c13297d3020fd82f4574dc49546ca223c0e8d3  ranger-1.9.3.tar.gz"
