--- a/testing/livestreamer/APKBUILD
+++ b/testing/livestreamer/APKBUILD
@@ -2,11 +2,11 @@
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=livestreamer
 pkgver=1.12.2
-pkgrel=6
+pkgrel=7
 pkgdesc="Command-line utility that extracts streams from various services and pipes them into a video player of choice"
-url="https://livestreamer.io/"
+url="https://docs.livestreamer.io/"
 arch="noarch"
-license="BSD-2-Clause AND  MIT"
+license="BSD-2-Clause AND MIT"
 depends="py3-requests rtmpdump py3-setuptools py3-crypto py3-librtmp"
 makedepends="py3-sphinx"
 source="$pkgname-$pkgver.tar.gz::https://github.com/chrippa/livestreamer/archive/v$pkgver.tar.gz"
