main/libwebsockets: fix url=

--- a/main/libwebsockets/APKBUILD
+++ b/main/libwebsockets/APKBUILD
@@ -2,9 +2,9 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=libwebsockets
 pkgver=3.2.1
-pkgrel=0
+pkgrel=1
 pkgdesc="C library for lightweight websocket clients and servers"
-url="http://libwebsockets.org"
+url="https://libwebsockets.org"
 arch="all"
 license="LGPL-2.0-or-later"
 options="!check"
