main/nmap: fix url=

--- a/main/nmap/APKBUILD
+++ b/main/nmap/APKBUILD
@@ -1,12 +1,11 @@
 # Maintainer: Leonardo Arena <rnalrd@alpinelinux.org>
 pkgname=nmap
 pkgver=7.80
-pkgrel=1
+pkgrel=2
 pkgdesc="A network exploration tool and security/port scanner"
-url="http://nmap.org"
+url="https://nmap.org"
 arch="all"
 license="custom"
-depends=""
 makedepends="linux-headers openssl-dev libpcap-dev pcre-dev zlib-dev libssh2-dev lua5.3-dev"
 options="!check" #FIXME: fails on armhf and aarch64
 subpackages="
@@ -15,9 +14,8 @@ subpackages="
 	$pkgname-nselibs::noarch
 	$pkgname-nping
 	$pkgname-ncat"
-source="https://nmap.org/dist/$pkgname-$pkgver.tar.bz2
+source="https://nmap.org/dist/nmap-$pkgver.tar.bz2
 	fortify-source.patch"
-builddir="$srcdir"/$pkgname-$pkgver
 
 # secfixes:
 #   7.80-r0:
@@ -30,7 +28,6 @@ prepare() {
 }
 
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -49,12 +46,10 @@ build() {
 }
 
 check() {
-	cd "$builddir"
 	make check
 }
 
 package() {
-	cd "$builddir"
 	make -j1 DESTDIR="$pkgdir" install
 	install -Dm644 COPYING \
 		"$pkgdir"/usr/share/licenses/$pkgname/LICENSE
