community/perl-autovivification: modernize

--- a/community/perl-autovivification/APKBUILD
+++ b/community/perl-autovivification/APKBUILD
@@ -6,39 +6,33 @@ _pkgreal=autovivification
 pkgver=0.18
 pkgrel=3
 pkgdesc="Lexically disable autovivification."
-url="http://search.cpan.org/dist/autovivification/"
+url="https://metacpan.org/release/autovivification"
 arch="all"
-license="GPL PerlArtistic"
-cpandepends=""
-cpanmakedepends=""
-depends="$cpandepends"
-makedepends="perl-dev $cpanmakedepends"
+license="GPL-1.0-or-later OR Artistic-1.0-Perl"
+depends="perl"
+makedepends="perl-dev"
 subpackages="$pkgname-doc"
-source="http://search.cpan.org/CPAN/authors/id/V/VP/VPIT/$_pkgreal-$pkgver.tar.gz"
+source="https://cpan.metacpan.org/authors/id/V/VP/VPIT/autovivification-$pkgver.tar.gz"
 
 builddir="$srcdir/$_pkgreal-$pkgver"
 
 prepare() {
 	default_prepare
 
-	cd "$builddir"
 	export CFLAGS=$(perl -MConfig -E 'say $Config{ccflags}')
 	PERL_MM_USE_DEFAULT=1 perl Makefile.PL INSTALLDIRS=vendor
 }
 
 build() {
-	cd "$builddir"
 	export CFLAGS=$(perl -MConfig -E 'say $Config{ccflags}')
 	make
 }
 
 check() {
-        cd "$builddir"
-        make test
+	make test
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 	find "$pkgdir" \( -name perllocal.pod -o -name .packlist \) -delete
 }
