testing/retroarch: upgrade to 1.8.2

--- a/testing/retroarch/APKBUILD
+++ b/testing/retroarch/APKBUILD
@@ -1,8 +1,7 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=retroarch
-_pkgname=RetroArch
-pkgver=1.7.9.2
+pkgver=1.8.2
 pkgrel=0
 arch="all"
 url="https://retroarch.com"
@@ -13,7 +12,7 @@ makedepends="linux-headers mesa-dev qt5-qtbase-dev wayland-dev wayland-protocols
 source="$pkgname-$pkgver.tar.gz::https://github.com/libretro/retroarch/archive/v$pkgver.tar.gz
 	config.patch"
 subpackages="$pkgname-doc"
-builddir="$srcdir/$_pkgname-$pkgver"
+builddir="$srcdir/RetroArch-$pkgver"
 options="!check" # No tests
 
 build() {
@@ -34,5 +33,5 @@ package() {
 	DESTDIR="$pkgdir" make install
 }
 
-sha512sums="67d267f5083b912018ae0d80b71cdedb75206a9c4ef8171eb9c5618e5075ee0af91437f90263b8acf96842cf3b458f0ee5959e17b37e1dbb65fb09e71ce711e5  retroarch-1.7.9.2.tar.gz
+sha512sums="0f2feae787d3c327641a85f16220149881c5fdc74a36d7e9b763b4e2dc6689ccddde7f48fa148e1ed654fe8aaa9f15a2f0144071e02292d4a671475ad212324f  retroarch-1.8.2.tar.gz
 55c08dc1d32c24b7fa15d9d843180d04147d0233eaf8cee6fb83d7393fc470f94aa16f22f6d10e75f2c66675979b2365993918fa11aaa32dc1f7951c7bca7038  config.patch"
