--- a/testing/retroarch-assets/APKBUILD
+++ b/testing/retroarch-assets/APKBUILD
@@ -1,14 +1,14 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=retroarch-assets
-pkgver=0_git20190622
+pkgver=0_git20191031
 pkgrel=0
-_commit="8d609101e6efab5510ec69c5bd2a8916356eaa1f"
+_commit="c2bbf234195bbad91c827337a2fb2b5bc727407b"
 arch="noarch"
 url="https://www.libretro.com/"
 pkgdesc="Assets needed for RetroArch - e.g. menu drivers, etc"
 license="CC-BY-4.0"
-source="$pkgname-$_commit.tar.gz::https://github.com/libretro/$pkgname/archive/$_commit.tar.gz"
+source="$pkgname-$_commit.tar.gz::https://github.com/libretro/retroarch-assets/archive/$_commit.tar.gz"
 builddir="$srcdir/$pkgname-$_commit"
 options="!check" # No code to test
 
@@ -20,4 +20,4 @@ package() {
 	DESTDIR="$pkgdir" make install
 }
 
-sha512sums="74ee79d822ff2e00fc09c65b1232f6ba2351e71cddd30817e3a8cb86c66af9624df0c886d79dc22a40712f3b15c31a0b8ebdd8e2776e26205f41b85b6cbfff65  retroarch-assets-8d609101e6efab5510ec69c5bd2a8916356eaa1f.tar.gz"
+sha512sums="f6d7ed068c36f65f3ac3765b6b18d7d723d4c7855033aaa344f9a33fae2a8aae01b82b074d87fe57fbea368b636351e86cd9485d9279a56d6284976fe87a1d5a  retroarch-assets-c2bbf234195bbad91c827337a2fb2b5bc727407b.tar.gz"
