--- a/testing/retroarch-joypad-autoconfig/APKBUILD
+++ b/testing/retroarch-joypad-autoconfig/APKBUILD
@@ -1,14 +1,14 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=retroarch-joypad-autoconfig
-pkgver=0_git20190821
+pkgver=0_git20191227
 pkgrel=0
-_commit="5afdb2c34def06a0d3fe5b0966e2870518b633f1"
+_commit="443b36d99f1ae4c43c2473f645ed5ae0de2a0c45"
 arch="noarch"
 url="https://github.com/libretro/retroarch-joypad-autoconfig"
 pkgdesc="RetroArch joypad autoconfig files"
 license="MIT"
-source="$pkgname-$_commit.tar.gz::https://github.com/libretro/$pkgname/archive/$_commit.tar.gz"
+source="$pkgname-$_commit.tar.gz::https://github.com/libretro/retroarch-joypad-autoconfig/archive/$_commit.tar.gz"
 builddir="$srcdir/$pkgname-$_commit"
 options="!check" # No code to test
 
@@ -16,4 +16,4 @@ package() {
 	DESTDIR="$pkgdir" make install
 }
 
-sha512sums="562d09b11639894368fef2e7db50b5f7848c4a359517cca7de8f4d3b592f3b56835e9b7414d5a8e749a9cade30f39cf6bfd2bd7e840bf800322805437f796835  retroarch-joypad-autoconfig-5afdb2c34def06a0d3fe5b0966e2870518b633f1.tar.gz"
+sha512sums="8fd3fc7c3f6a773ad37b2c975e2cd8db35f21d6fa03ead06cae063effab369c81574940c9ef65bbba56f00ad34b34c50958559866e724cdff0615d84336e843c  retroarch-joypad-autoconfig-443b36d99f1ae4c43c2473f645ed5ae0de2a0c45.tar.gz"
