testing/libretro-beetle-psx: upgrade to 0_git20191227

--- a/testing/libretro-beetle-psx/APKBUILD
+++ b/testing/libretro-beetle-psx/APKBUILD
@@ -1,18 +1,17 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=libretro-beetle-psx
-_pkgname=beetle-psx-libretro
-pkgver=0_git20190802
+pkgver=0_git20191227
 pkgrel=0
-_commit="7b584a4ce05968482a1e5e3719ba341807f42277"
+_commit="18a9de19f3f079408eb8181aa4c5144e9434c5f7"
 arch="all !s390x"
 url="https://github.com/libretro/beetle-psx-libretro"
 pkgdesc="Standalone port/fork of Mednafen PSX to the Libretro API"
 license="GPL-2.0-or-later"
 makedepends="mesa-dev"
-source="$pkgname-$_commit.tar.gz::https://github.com/libretro/$_pkgname/archive/$_commit.tar.gz"
+source="$pkgname-$_commit.tar.gz::https://github.com/libretro/beetle-psx-libretro/archive/$_commit.tar.gz"
 subpackages="$pkgname-hw"
-builddir="$srcdir/$_pkgname-$_commit"
+builddir="$srcdir/beetle-psx-libretro-$_commit"
 options="!check" # No tests
 
 prepare() {
@@ -37,4 +36,4 @@ hw() {
 	install -Dm644 "$builddir"/libretro-beetle-psx-hw/mednafen_psx_hw_libretro.so "$subpkgdir"/usr/lib/libretro
 }
 
-sha512sums="e8f2cbb6823ee3b1bedc137a1de5b681e86c9e11d04a00fd7e7496dad613b9e07bb56c64d588ec82551e09d869b62cbf5c5a630ce72fc7452cb38fd97a026c45  libretro-beetle-psx-7b584a4ce05968482a1e5e3719ba341807f42277.tar.gz"
+sha512sums="896209e20341d7cc7e38c2b3ac881feb8bcd1322d95d48f57ba2cb14bee6b62b7187ff10c3806a2753b1af0f0f887d2dc3635aee268c432424f3150912938a75  libretro-beetle-psx-18a9de19f3f079408eb8181aa4c5144e9434c5f7.tar.gz"
