--- a/testing/libretro-bsnes/APKBUILD
+++ b/testing/libretro-bsnes/APKBUILD
@@ -1,17 +1,15 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=libretro-bsnes
-_pkgname=bsnes-libretro
-pkgver=0_git20190627
+pkgver=0_git20191009
 pkgrel=0
-_commit="41fe3ece28ee1d7ae546e777daffe1720fc1b7d1"
+_commit="feb8c10c672094e689ed057a278c2b354e113f32"
 arch="all"
 url="https://github.com/libretro/bsnes-libretro"
 pkgdesc="Super Nintendo Entertainment System (Famicon) core"
 license="GPL-3.0-only"
-source="$pkgname-$_commit.tar.gz::https://github.com/libretro/bsnes-libretro/archive/$_commit.tar.gz
-	flags.patch"
-builddir="$srcdir/$_pkgname-$_commit"
+source="$pkgname-$_commit.tar.gz::https://github.com/libretro/bsnes-libretro/archive/$_commit.tar.gz"
+builddir="$srcdir/bsnes-libretro-$_commit"
 options="!check" # No tests
 
 build() {
@@ -22,9 +20,8 @@ build() {
 
 package() {
 	for p in accuracy balanced performance; do
-		install -Dm644 out/bsnes_${p}_libretro.so "$pkgdir"/usr/lib/libretro/bsnes_${p}_libretro.so
+		install -Dm644 out/bsnes2014_${p}_libretro.so "$pkgdir"/usr/lib/libretro/bsnes2014_${p}_libretro.so
 	done
 }
 
-sha512sums="85ece7d8773cf17f66b322afd938b4048283392174b70e529e2bb016ff1c7f3505408105b8e54976ebf1c307cafa6485197f2d3526b46d4fd7179e3581cc5d27  libretro-bsnes-41fe3ece28ee1d7ae546e777daffe1720fc1b7d1.tar.gz
-33cb5bb012ed4414b906051d9837fa85e4f91b0b361fb7d0b96734b24576d44caedd146c60fef541b921f2a2823f69db6907d09a08fcc2c8d794bbd9cc0faa4f  flags.patch"
+sha512sums="fe318ea28cf37385dd30806cce79aef318fe9a2f6169da1e8051ccb898cfa0b0ef4d8e19e2098713b85de6277cab02f5bd515222257dddb76e0eb9da39a239d4  libretro-bsnes-feb8c10c672094e689ed057a278c2b354e113f32.tar.gz"
