--- a/testing/libretro-core-info/APKBUILD
+++ b/testing/libretro-core-info/APKBUILD
@@ -1,19 +1,17 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=libretro-core-info
-pkgver=1.7.9.2
-_pkgver=1.7.9-2
+pkgver=1.8.2
 pkgrel=0
 arch="noarch"
 url="https://www.libretro.com/"
 pkgdesc="Libretro core info files"
 license="MIT"
-source="$pkgname-$pkgver.tar.gz::https://github.com/libretro/libretro-core-info/archive/v$_pkgver.tar.gz"
+source="$pkgname-$pkgver.tar.gz::https://github.com/libretro/libretro-core-info/archive/v$pkgver.tar.gz"
 options="!check" # No code to test
-builddir="$srcdir/$pkgname-$_pkgver"
 
 package() {
 	DESTDIR="$pkgdir" make install
 }
 
-sha512sums="bf6120724156f6a5d22343e5b01a3b2ecbfbc760eea538e38e03f09dd43d49e8da24eabc8c3640009854166edf0cacee5d7a7501c16466f485a902760985b68b  libretro-core-info-1.7.9.2.tar.gz"
+sha512sums="351c356b360d85d8940cefee0e2e97aee2e714e098dd0f81a8d3ec7284315a88079795f2d201c1fe16079f70b02afcfe19b5957b9f279f948eade1e23c99d2e0  libretro-core-info-1.8.2.tar.gz"
