testing/kitinerary: move several dependencies to depends_dev
Based on https://github.com/KDE/kitinerary/blob/v19.12.0/KPimItineraryConfig.cmake.in

--- a/testing/kitinerary/APKBUILD
+++ b/testing/kitinerary/APKBUILD
@@ -2,20 +2,23 @@
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=kitinerary
 pkgver=19.12.0
-pkgrel=0
+pkgrel=1
 arch="all"
 url="https://kontact.kde.org/"
 pkgdesc="Data model and extraction system for travel reservation information"
 license="LGPL-2.0-or-later"
-makedepends="
-	extra-cmake-modules
-	qt5-qtbase-dev
-	qt5-qtdeclarative-dev
-	ki18n-dev
+depends_dev="
 	kmime-dev
 	kcalendarcore-dev
 	kcontacts-dev
 	kpkpass-dev
+	"
+makedepends="
+	$depends_dev
+	extra-cmake-modules
+	qt5-qtbase-dev
+	qt5-qtdeclarative-dev
+	ki18n-dev
 	poppler-dev
 	zxing-cpp-dev
 	zxing-cpp
