community/s-nail: rebuild with tests

--- a/community/s-nail/APKBUILD
+++ b/community/s-nail/APKBUILD
@@ -3,9 +3,9 @@
 # Maintainer:
 pkgname=s-nail
 pkgver=14.9.16
-pkgrel=0
+pkgrel=1
 pkgdesc="SysV mail/BSD Mail/POSIX mailx: send and receive Internet mail"
-options="!check suid" # 415 tests: 414 ok, 1 failure(s).  0 test(s) skipped
+options="suid"
 url="https://www.sdaoden.eu/code.html#s-mailx"
 arch="all"
 license="BSD-3-Clause"
