main/doas: fix simple typo in description
Closes !2650

(cherry picked from commit 8fd8655e06c3b22e4e31e04519f12bbb2c94ad58)
also remove unused doas.conf

--- a/main/doas/APKBUILD
+++ b/main/doas/APKBUILD
@@ -1,8 +1,8 @@
 # Maintainer: Drew DeVault <sir@cmpwn.com>
 pkgname=doas
 pkgver=6.6
-pkgrel=2
-pkgdesc="OpenBSD's temporary privledge escalation tool"
+pkgrel=3
+pkgdesc="OpenBSD's temporary privilege escalation tool"
 url="https://github.com/Duncaen/OpenDoas"
 arch="all"
 license="BSD"
