--- a/community/bcc/APKBUILD
+++ b/community/bcc/APKBUILD
@@ -1,20 +1,21 @@
 # Maintainer: Adam Jensen <acjensen@gmail.com>
 pkgname=bcc
 pkgver=0.12.0
-pkgrel=0
+pkgrel=1
 pkgdesc="A toolkit for creating efficient kernel tracing and manipulation programs"
 url="https://github.com/iovisor/bcc/"
 arch="aarch64 x86 x86_64"
 license="Apache-2.0"
 # bcc's test suite requires privileged access to run BPF programs
 options="!check"
-subpackages="$pkgname-dev $pkgname-doc:_doc $pkgname-tools:_tools $pkgname-lua:_lua py3-$pkgname:_py"
+subpackages="$pkgname-static $pkgname-dev $pkgname-doc:_doc $pkgname-tools:_tools $pkgname-lua:_lua py3-$pkgname:_py"
 _llvmver=9
 makedepends="tar git llvm$_llvmver-dev llvm$_llvmver-static clang-dev clang-static cmake
 	python3 flex-dev bison luajit-dev build-base iperf linux-headers elfutils-dev zlib-dev
 	libbpf-dev"
 source="$pkgname-$pkgver.tar.gz::https://github.com/iovisor/bcc/archive/v$pkgver.tar.gz
-	10-use-system-libbpf.patch"
+	10-use-system-libbpf.patch
+	20-install-static.patch"
 
 prepare() {
 	rm -rf tests/* && touch tests/CMakeLists.txt
@@ -73,4 +74,5 @@ _lua() {
 }
 
 sha512sums="db3ea929b1296f4d9d82d2a11e89e11a1c31512d3f7f935475a7613e0128a5cf9441f3138969535ef41de0c0f677c7446f62f1c64575d41a9896e5339f3f112b  bcc-0.12.0.tar.gz
-caffeea956f6d4b83f63a321eee17c2a12987c99b3c65444fdfeb15e0f6c8927e865358ed2db6bd6736757df007c4c11bd06a5c174884d1542b7ee38b0496b49  10-use-system-libbpf.patch"
+caffeea956f6d4b83f63a321eee17c2a12987c99b3c65444fdfeb15e0f6c8927e865358ed2db6bd6736757df007c4c11bd06a5c174884d1542b7ee38b0496b49  10-use-system-libbpf.patch
+4844295d9468def0c5b896941c002a1cf79ab48aa48e847db9c9e14b392b579be2558e53850fbcdc25124a522be81eb53f2f44b0ef8daa37cd632ec7e57b34a9  20-install-static.patch"
