--- a/community/bcc/APKBUILD
+++ b/community/bcc/APKBUILD
@@ -1,20 +1,21 @@
 # Maintainer: Adam Jensen <acjensen@gmail.com>
 pkgname=bcc
-pkgver=0.11.0
-pkgrel=1
+pkgver=0.12.0
+pkgrel=0
 pkgdesc="A toolkit for creating efficient kernel tracing and manipulation programs"
 url="https://github.com/iovisor/bcc/"
 arch="aarch64 x86 x86_64"
 license="Apache-2.0"
 # bcc's test suite requires privileged access to run BPF programs
 options="!check"
-subpackages="$pkgname-dev $pkgname-doc:_doc $pkgname-tools:_tools $pkgname-lua:_lua py3-$pkgname:_py"
+subpackages="$pkgname-static $pkgname-dev $pkgname-doc:_doc $pkgname-tools:_tools $pkgname-lua:_lua py3-$pkgname:_py:noarch"
 _llvmver=9
 makedepends="tar git llvm$_llvmver-dev llvm$_llvmver-static clang-dev clang-static cmake
 	python3 flex-dev bison luajit-dev build-base iperf linux-headers elfutils-dev zlib-dev
 	libbpf-dev"
 source="$pkgname-$pkgver.tar.gz::https://github.com/iovisor/bcc/archive/v$pkgver.tar.gz
-	10-use-system-libbpf.patch"
+	10-use-system-libbpf.patch
+	20-install-static.patch"
 
 prepare() {
 	rm -rf tests/* && touch tests/CMakeLists.txt
@@ -72,5 +73,6 @@ _lua() {
 	mv "$pkgdir"/usr/bin/bcc-lua "$subpkgdir"/usr/bin
 }
 
-sha512sums="4854a5a15a89a8bd3a10daa6f0e831428316751280902cbdc74f3c6f78263ee1c58521ae9125804e72fec6482702818a5fec781436400640627e4b7c2fc189fb  bcc-0.11.0.tar.gz
-f2aa0e3184f11a80d98f5a68d7f46799d471818dafb03d9683c09f33ed2400a3c570807ef6773d4011f0851217089f976ffeff9f5d3279a81e5f551dadc506b5  10-use-system-libbpf.patch"
+sha512sums="db3ea929b1296f4d9d82d2a11e89e11a1c31512d3f7f935475a7613e0128a5cf9441f3138969535ef41de0c0f677c7446f62f1c64575d41a9896e5339f3f112b  bcc-0.12.0.tar.gz
+caffeea956f6d4b83f63a321eee17c2a12987c99b3c65444fdfeb15e0f6c8927e865358ed2db6bd6736757df007c4c11bd06a5c174884d1542b7ee38b0496b49  10-use-system-libbpf.patch
+c84d08f31fceb9af9c4bfeb0056b2f20c385b8eb44aafa1ab40049586e3b71d38882ca236e9f3fff5a9eebae9c570f56c73cc87966659e71743a5a38a30de388  20-install-static.patch"
