community/prometheus: fix init scripts and assets
- Fix the init script to reference the correct variables (otherwise
  prometheus tries to start in /)
- Embed static assets so that the built-in web-ui will work, without
  adding extra files to the package

Closes !2652

--- a/community/prometheus/APKBUILD
+++ b/community/prometheus/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Drew DeVault <sir@cmpwn.com>
 pkgname=prometheus
 pkgver=2.15.1
-pkgrel=0
+pkgrel=1
 pkgdesc="The Prometheus monitoring system and time series database"
 url="https://github.com/prometheus/prometheus"
 arch="all"
@@ -16,11 +16,20 @@ source="
 subpackages="$pkgname-openrc"
 options="!check" # Broken by integrations we don't care about
 
+prepare() {
+	default_prepare
+	cd web/ui
+	go generate -x -v
+	cd ../../
+	gofmt -w ./web/ui
+}
+
 build() {
 	go build \
 		-trimpath \
 		-mod=vendor \
 		-ldflags "-extldflags $LDFLAGS" \
+		-tags netgo,builtinassets \
 		./cmd/prometheus
 	go build \
 		-trimpath \
@@ -48,5 +57,5 @@ package() {
 }
 
 sha512sums="b08dfa48bddb6e007cd0fd4553847e824d6adfc047d97151b8dd12dbd1f67cfb9301824b320f1cabe9644159e6968b3fd2ee8104a5d53822a9965423c4bb47b5  prometheus-2.15.1.tar.gz
-6e0edcae0c64b319926b2cbe92b59be51b00fde15f83098bfe9f622a71d60598aa87d26aaec802716ace17e399900cb05b106087ab28e5dd4eff5106c0f1cbfc  prometheus.confd
-e747fa8d806ef9cdf224d63f9802646985b812aaddfd9b6fcc453348f810fec8cce30605f9bbd709809cb66b4638903623a1284efdbdf09725135cc956165475  prometheus.initd"
+24b34e586238d5b331639aa5c43b6a927692f251af2cea2787335eab30d2fc7d46975059595db4697ae0dc1d35b5e23cfc4e4b2e424442c209a05283ca22a239  prometheus.confd
+bdc179cb3b8b5d3416e74a0b31002bd7b456b204404579dd40c38cade43eb26b106d16ea2597755035035eca567d34bfa44913eaa28870c3f22e1105d47908ab  prometheus.initd"
