testing/simgear: upgrade to 2019.1.1

--- a/testing/simgear/APKBUILD
+++ b/testing/simgear/APKBUILD
@@ -1,41 +1,37 @@
 # Maintainer: Leonardo Arena <rnalrd@alpinelinux.org>
 pkgname=simgear
-pkgver=2018.3.2
-pkgrel=1
+pkgver=2019.1.1
+pkgrel=0
 pkgdesc="Sim library for FlightGear"
 options="!check" # Accepts boost only up to 1.71.0
 url="https://github.com/FlightGear/simgear"
 arch="x86 x86_64" # openscenegraph availability
 license="GPL"
 makedepends="$depends_dev boost-dev cmake curl-dev mesa-dev openal-soft-dev
-	openscenegraph-dev zlib-dev"
-subpackages=
+	openscenegraph-dev zlib-dev expat-dev"
+subpackages="$pkgname-dev"
 source="https://downloads.sourceforge.net/project/flightgear/release-${pkgver%.[0-9]}/simgear-$pkgver.tar.bz2
 	musl-fixes.patch
 	"
 builddir="$srcdir"/$pkgname-$pkgver
 
-prepare() {
-	cd "$builddir"
-	default_prepare
-	mkdir sgbuild && cd sgbuild
-	cmake .. \
+build() {
+	# use system expat
+	rm -rf simgear/xml/*.h simgear/xml/*.c
+
+	cmake \
 		-DCMAKE_BUILD_TYPE=Release \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib \
-		-D_POSIX_C_SOURCE=200112L \
-		-DENABLE_TESTS=false
-}
-
-build() {
-	cd "$builddir/sgbuild"
+		-DSYSTEM_EXPAT=ON \
+		-DENABLE_TESTS=false \
+		.
 	make
 }
 
 package() {
-	cd "$builddir/sgbuild"
 	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="3f60df34f22ea84bdb3e0aa0e2c0b73b2fddf15d17ea985aee254bf4c269b7447976629a7e4b022c460c7c406940d0b2669b723c6b899499d064cfe91546f0ba  simgear-2018.3.2.tar.bz2
+sha512sums="83fe4330cf27b9298719f53f2fccde2af77bacdc6f430cc22c8bdfb475fe9b6e01578c1225af21e4e1433c7d2f2b00427454064f942359ba4c1e9896e7fe05d2  simgear-2019.1.1.tar.bz2
 7efcf01c9328b0732ae9aa7af4edb52e14919663a8d3acbe429a0697f59a55e85a71628d9afaa3d38327d960dbf5dacc1f964e38dd6cb499b593ae2be918b140  musl-fixes.patch"
