testing/flightgear: upgrade to 2019.1.1

--- a/testing/flightgear/APKBUILD
+++ b/testing/flightgear/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Leonardo Arena <rnalrd@alpinelinux.org>
 # Maintainer:
 pkgname=flightgear
-pkgver=2018.3.2
-pkgrel=1
+pkgver=2019.1.1
+pkgrel=0
 pkgdesc="Sophisticated flight simulator"
 url="http://flightgear.org"
 arch="x86 x86_64" # openscenegraph availability
@@ -10,18 +10,15 @@ license="GPL"
 makedepends="$depends_dev boost-dev cmake curl-dev dbus-dev eudev-dev
 	freeglut-dev glew-dev libx11-dev libxi-dev libxmu-dev mesa-dev
 	openal-soft-dev openscenegraph-dev plib qt5-qtbase-dev
-	qt5-qtdeclarative-dev qt5-qtsvg-dev simgear zlib-dev"
+	qt5-qtdeclarative-dev qt5-qtsvg-dev simgear-dev zlib-dev"
 install="$pkgname.post-install"
 subpackages="$pkgname-doc $pkgname-dbg"
 options="!check" # FIXME test suite does not get built
-source="https://downloads.sourceforge.net/project/$pkgname/release-${pkgver%.[1-9]*}/$pkgname-$pkgver.tar.bz2
+source="https://downloads.sourceforge.net/project/flightgear/release-${pkgver%.[1-9]*}/flightgear-$pkgver.tar.bz2
 	musl-fixes.patch
 	"
-builddir="$srcdir"/$pkgname-$pkgver
 
 build() {
-	cd "$builddir"
-	mkdir _build.tmp && cd _build.tmp
 	cmake \
 		-D BUILD_TESTING=ON \
 		-D CMAKE_BUILD_TYPE="Release" \
@@ -29,19 +26,17 @@ build() {
 		-D CMAKE_INSTALL_SYSCONFDIR=/etc/$pkgname \
 		-D FG_DATA_DIR=/var/lib/$pkgname \
 		-D SimGear_DIR=/usr/lib/cmake/SimGear \
-		..
+		.
 	make
 }
 
 check() {
-	cd "$builddir/_build.tmp"
 	make test
 }
 
 package() {
-	cd "$builddir/_build.tmp"
 	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="76a127949351fe48d847a1471002ecbc3daa769952fef7a7a141e83031771e87f4e23c329e9d03ddd2e99b4b96fb6af2ebe5ab90ca50c0111217c62492cd516d  flightgear-2018.3.2.tar.bz2
+sha512sums="edcc464af0bde4766e61137211276d77a6bb297567b0168dfaf3b97fdb9a595e5e8a0b84232680fcc975cf195261b9751edb79ae73123333feb31ab3d7215d8c  flightgear-2019.1.1.tar.bz2
 3350de9e465dc4f865d2a94d96b2f79b4c98c994fc4713cfa296c20ed12129f310779171b89639f69d1e4f5f0103fca6cc01df5a9e25d77f93a0b4e76f6b973a  musl-fixes.patch"
