testing/openscad: fix build with boost 1.72

--- a/testing/openscad/APKBUILD
+++ b/testing/openscad/APKBUILD
@@ -34,7 +34,8 @@ checkdepends="
 	xorgproto
 	xvfb-run
 	"
-source="https://files.openscad.org/openscad-$pkgver.src.tar.gz"
+source="https://files.openscad.org/openscad-$pkgver.src.tar.gz
+	boost-1.72.patch"
 options="!check" # Tests fail in xvfb, but pass on real X server
 
 build() {
@@ -56,4 +57,5 @@ package() {
 	make INSTALL_ROOT="$pkgdir" install
 }
 
-sha512sums="073053f625ffa4fea6ed836396b7ff4b87b26cf7500b06c804983afc0f1dfd3d78bfb81b3fd217c3939b0ec915d85b0c7990773eaf968512a150deaa0399df13  openscad-2019.05.src.tar.gz"
+sha512sums="073053f625ffa4fea6ed836396b7ff4b87b26cf7500b06c804983afc0f1dfd3d78bfb81b3fd217c3939b0ec915d85b0c7990773eaf968512a150deaa0399df13  openscad-2019.05.src.tar.gz
+8cd01ce250975440bdc4515bd5acb13b39853b9c03b0368eea3e998752c80f57026db34ff653194461fb3e5187ff3f084943bc0ddc599bbaa100a9003ba7494a  boost-1.72.patch"
