community/kea: fix capabilities

--- a/community/kea/APKBUILD
+++ b/community/kea/APKBUILD
@@ -4,7 +4,7 @@
 # Contributor: Jakub Jirutka <jakub@jirutka.cz>
 pkgname=kea
 pkgver=1.7.3
-pkgrel=0
+pkgrel=1
 pkgdesc="DHCPv4 and DHCPv6 server from ISC"
 url="http://kea.isc.org"
 # armhf, armv7: limited by log4cplus
@@ -103,10 +103,10 @@ package() {
 	cd "$pkgdir"
 
 	# Allow kea to run under unpriviliged user.
-	local name; for name in kea-dhcp-ddns kea-dhcp4 kea-dhcp6; do
+	local name; for name in kea-dhcp-ddns kea-dhcp6; do
 		setcap 'cap_net_bind_service=+ep' ./usr/sbin/$name
 	done
-	setcap 'cap_net_raw=+ep' ./usr/sbin/kea-dhcp6
+	setcap 'cap_net_bind_service,cap_net_raw=+ep' ./usr/sbin/kea-dhcp4
 
 	install -d -m 0750 -o kea -g kea ./var/log/kea ./var/lib/kea
 
