community/wireshark: move install scripts to -common subpackage
The dumpcap binary is owned by the wireshark group. Unfortunately,
this binary is shipped by wireshark-common not wireshark itself. As
such, the post-install scripts creating and advertising this group must
also be part of the subpackage.

--- a/community/wireshark/APKBUILD
+++ b/community/wireshark/APKBUILD
@@ -4,7 +4,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=wireshark
 pkgver=3.0.7
-pkgrel=2
+pkgrel=3
 pkgdesc="A network protocol analyzer"
 url="https://www.wireshark.org"
 arch="all"
@@ -16,7 +16,6 @@ makedepends="bash bison c-ares-dev cmake flex glib glib-dev gnutls-dev
 checkdepends="py3-pytest py3-pytest-xdist"
 subpackages="$pkgname-dev $pkgname-doc $pkgname-common tshark"
 pkggroups="wireshark"
-install="$pkgname.pre-install $pkgname.pre-upgrade $pkgname.post-install"
 # Use mirror in the meantime
 # source="https://www.wireshark.org/download/src/wireshark-$pkgver.tar.xz
 source="https://1.as.dl.wireshark.org/src/wireshark-$pkgver.tar.xz
@@ -233,6 +232,8 @@ package() {
 common() {
 	local i
 	pkgdesc="network protoccol analyzer - common files"
+	install="$subpkgname.pre-install $subpkgname.pre-upgrade $subpkgname.post-install"
+
 	mkdir -p "$subpkgdir"/usr/lib "$subpkgdir"/usr/share \
 		"$subpkgdir"/usr/bin
 	mv "$pkgdir"/usr/share/wireshark "$subpkgdir"/usr/share/
