--- a/community/kea-hook-runscript/APKBUILD
+++ b/community/kea-hook-runscript/APKBUILD
@@ -1,7 +1,8 @@
-# Maintainer: Steve Holweg <skytep@gmail.com>
+# Maintainer: Jakub Jirutka <jakub@jirutka.cz>
+# Contributor: Steve Holweg <skytep@gmail.com>
 pkgname=kea-hook-runscript
 pkgver=1.3.1
-pkgrel=3
+pkgrel=4
 pkgdesc="This a hook for the Kea DHCP server that allows to run an external script."
 url="https://github.com/zorun/kea-hook-runscript"
 arch="all !armhf !armv7 !s390x"  # limited by kea
