--- a/community/kitemmodels/APKBUILD
+++ b/community/kitemmodels/APKBUILD
@@ -2,13 +2,13 @@
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=kitemmodels
 pkgver=5.65.0
-pkgrel=0
+pkgrel=1
 pkgdesc="Models for Qt Model/View system"
 arch="all"
 url="https://community.kde.org/Frameworks"
 license="LGPL-2.0-only AND LGPL-2.0-or-later"
 depends_dev="qt5-qtbase-dev"
-makedepends="$depends_dev extra-cmake-modules qt5-qttools-dev doxygen"
+makedepends="$depends_dev extra-cmake-modules qt5-qttools-dev qt5-qtdeclarative-dev doxygen"
 checkdepends="xvfb-run"
 source="https://download.kde.org/stable/frameworks/${pkgver%.*}/kitemmodels-$pkgver.tar.xz"
 subpackages="$pkgname-dev $pkgname-doc"
