community/prometheus: also include the new react-app
- previous builds were not including the react-app so going to
  hostname:9090/new/ did not work. This will fix it, with the downside
  of adding yarn as a build dependency

--- a/community/prometheus/APKBUILD
+++ b/community/prometheus/APKBUILD
@@ -7,7 +7,7 @@ url="https://github.com/prometheus/prometheus"
 arch="all"
 license="Apache-2.0"
 install="prometheus.pre-install"
-makedepends="go"
+makedepends="go yarn"
 source="
 	$pkgname-$pkgver.tar.gz::https://github.com/prometheus/prometheus/archive/v$pkgver.tar.gz
 	prometheus.confd
@@ -18,6 +18,11 @@ options="!check" # Broken by integrations we don't care about
 
 prepare() {
 	default_prepare
+	cd web/ui/react-app
+	yarn --frozen-lockfile
+	yarn lint
+	cd ../../../
+	./scripts/build_react_app.sh
 	cd web/ui
 	go generate -x -v
 	cd ../../
