community/prometheus: add bash as a build dependency
this can be avoided by 'porting' the actions done by build_react_app.sh
to the APKBUILD but this would require manual actions in the future if
upstream decides to change the script

--- a/community/prometheus/APKBUILD
+++ b/community/prometheus/APKBUILD
@@ -7,7 +7,7 @@ url="https://github.com/prometheus/prometheus"
 arch="all"
 license="Apache-2.0"
 install="prometheus.pre-install"
-makedepends="go yarn"
+makedepends="go yarn bash"
 source="
 	$pkgname-$pkgver.tar.gz::https://github.com/prometheus/prometheus/archive/v$pkgver.tar.gz
 	prometheus.confd
