--- a/main/sudo/APKBUILD
+++ b/main/sudo/APKBUILD
@@ -2,7 +2,7 @@
 # Contributor: Łukasz Jendrysik <scadu@yandex.com>
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=sudo
-pkgver=1.8.29
+pkgver=1.8.30
 if [ "${pkgver%_*}" != "$pkgver" ]; then
 	_realver=${pkgver%_*}${pkgver#*_}
 else
@@ -15,7 +15,7 @@ arch="all"
 license="custom ISC"
 makedepends="zlib-dev bash mdocml"
 subpackages="$pkgname-doc $pkgname-dev"
-source="https://www.sudo.ws/dist/sudo-${_realver}.tar.gz
+source="https://www.sudo.ws/dist/sudo-$_realver.tar.gz
 	fix-cross-compile.patch
 	SIGUNUSED.patch
 	"
@@ -27,9 +27,7 @@ options="suid"
 #   1.8.20_p2-r0:
 #     - CVE-2017-1000368
 
-builddir="$srcdir"/$pkgname-$_realver
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -51,13 +49,10 @@ build() {
 }
 
 check() {
-	cd "$builddir"
-
 	make check
 }
 
 package() {
-	cd "$builddir"
 	# the sudo's mkinstalldir script miscreates the leading
 	# path components with bad permissions. fix this.
 	install -d -m0755 "$pkgdir"/var "$pkgdir"/var/db
@@ -65,6 +60,6 @@ package() {
 	rm -rf "$pkgdir"/var/run
 }
 
-sha512sums="ea780922b2afb47df4df4b533fb355fd916cb18a6bfd13c7ca36a25b03ef585d805648c6fa85692bea363b1f83664ac3bc622f99bcd149b3a86f70522eb4d340  sudo-1.8.29.tar.gz
+sha512sums="d44831feabd92d736614239e0e0f086829d84b213c98524fffb4b926a96715b1156538a7ab5e0b6e0db8be67a6e24a1642b3648105b076d23b58c39d0dd947af  sudo-1.8.30.tar.gz
 f0f462f40502da2194310fe4a72ec1a16ba40f95a821ba9aa6aabaa423d28c4ab26b684afa7fb81c2407cf60de9327bdab01de51b878c5d4de49b0d62645f53c  fix-cross-compile.patch
 1f81f85f9dea6ee7e66d9b180611115cf8945f01cde19f5666ac09c759ae0c9a49fb464672650ec216e43d9159ff97c9ba786d5cae5917642ab1f31c29af8546  SIGUNUSED.patch"
