--- a/testing/libsigc++3/APKBUILD
+++ b/testing/libsigc++3/APKBUILD
@@ -1,34 +1,34 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
 # Maintainer: Leo <thinkabit.ukim@gmail.com>
 pkgname=libsigc++3
-pkgver=3.0.0
+pkgver=3.0.2
 pkgrel=0
 pkgdesc="Typesafe callback system for standard C++"
 url="https://github.com/libsigcplusplus/libsigcplusplus"
 arch="all"
 license="LGPL-3.0-or-later"
-makedepends="boost-dev"
+makedepends="boost-dev meson perl"
 subpackages="$pkgname-dev"
-source="https://github.com/libsigcplusplus/libsigcplusplus/releases/download/$pkgver/libsigc++-$pkgver.tar.xz"
+source="https://download.gnome.org/sources/libsigc++/${pkgver%.*}/libsigc++-$pkgver.tar.xz"
 builddir="$srcdir/libsigc++-$pkgver"
 
 build() {
-	./configure \
-		--build=$CBUILD \
-		--host=$CHOST \
+	meson \
 		--prefix=/usr \
 		--sysconfdir=/etc \
 		--mandir=/usr/share/man \
-		--localstatedir=/var
-	make
+		--localstatedir=/var \
+		--buildtype=debugoptimized \
+		build
+	ninja -C build
 }
 
 check() {
-	make check
+	ninja -C build test
 }
 
 package() {
-	make DESTDIR="$pkgdir" install
+	DESTDIR="$pkgdir" ninja -C build install
 }
 
-sha512sums="827831bd3d9aced63419e7616250ad7469db80dda101ad3b919e379e68fd54389e419093385b0fcfb695fc0f7ca954f5007bd747bf88a82090e649c2294a6d9b  libsigc++-3.0.0.tar.xz"
+sha512sums="8336ed5a82fb47e0315753226e2c2dc43b1ef2717ff6a17e7f16629e6330479ee0f91fc32bedc6fea05803401411207e785c1a501d235be5e0e9c1686ca5cddc  libsigc++-3.0.2.tar.xz"
