--- a/testing/telegram-desktop/APKBUILD
+++ b/testing/telegram-desktop/APKBUILD
@@ -3,12 +3,13 @@
 # TODO(Leo): remove pulseaudio dep
 pkgname=telegram-desktop
 pkgver=1.9.3
-pkgrel=0
+pkgrel=1
 _breakpad_commit=dbd454dbe47e584571388fc3533193416bdce67f
 pkgdesc="Telegram Desktop messaging app"
 options="!check" # Requires Catch2 to be packaged.
 url="https://desktop.telegram.org/"
 arch="all !s390x" # Need support on lib_base
+arch="$arch !armhf !armv7 !x86" # Not enough memory to link
 license="GPL-3.0-or-later WITH OpenSSL"
 depends="qt5-qtimageformats libappindicator"
 makedepends="
@@ -30,8 +31,8 @@ makedepends="
 	libexecinfo-dev
 	rapidjson-dev
 	lz4-dev
-	pulseaudio-dev
 	qtchooser
+	pulseaudio-dev
 	libdbusmenu-glib-dev
 	libappindicator-dev
 	xxhash-dev
@@ -43,20 +44,20 @@ source="
 	https://github.com/telegramdesktop/tdesktop/releases/download/v$pkgver/tdesktop-$pkgver-full.tar.gz
 	breakpad-$_breakpad_commit.tar.gz::https://github.com/google/breakpad/archive/$_breakpad_commit.tar.gz
 	xdg.patch
-	lz4.patch
-	zlib.patch
-	opus.patch
-	openal.patch
-	openssl.patch
-	ffmpeg.patch
-	qt.patch
-	range-v3.patch
+	lz4.cmake
+	zlib.cmake
+	opus.cmake
+	openal.cmake
+	openssl.cmake
+	ffmpeg.cmake
+	qt.cmake
+	range-v3.cmake
+	breakpad.cmake
 	musl-basename.patch
 	updater.patch
 	default-shared.patch
 	exotic-arch-compat.patch
 	werror-o2.patch
-	breakpad-loc.patch
 	qt_functions.patch
 	ppc.patch
 	qt-plugin-path.patch
@@ -70,7 +71,19 @@ prepare() {
 
 	mv "$srcdir"/breakpad-$_breakpad_commit "$builddir"/Telegram/ThirdParty/breakpad
 
+	# Copy our file over
 	cp -L "$srcdir"/qt_functions.cpp "$builddir"/Telegram/SourceFiles
+
+	# Install our cmake files
+	mv "$srcdir"/lz4.cmake "$builddir"/cmake/external/lz4/CMakeLists.txt
+	mv "$srcdir"/zlib.cmake "$builddir"/cmake/external/zlib/CMakeLists.txt
+	mv "$srcdir"/opus.cmake "$builddir"/cmake/external/opus/CMakeLists.txt
+	mv "$srcdir"/openal.cmake "$builddir"/cmake/external/openal/CMakeLists.txt
+	mv "$srcdir"/openssl.cmake "$builddir"/cmake/external/openssl/CMakeLists.txt
+	mv "$srcdir"/ffmpeg.cmake "$builddir"/cmake/external/ffmpeg/CMakeLists.txt
+	mv "$srcdir"/qt.cmake "$builddir"/cmake/external/qt/CMakeLists.txt
+	mv "$srcdir"/range-v3.cmake "$builddir"/cmake/external/ranges/CMakeLists.txt
+	mv "$srcdir"/breakpad.cmake "$builddir"/cmake/external/crash_reports/breakpad/CMakeLists.txt
 
 	default_prepare
 
@@ -123,20 +136,20 @@ package() {
 sha512sums="af8e5d2c74d0b990958edd75a01f40b70bc21c0f69074acfb943f44fdb1f1e84465b461765a1a584513e54ab30045817b42b6839ad16cb4c1043fda89ea600f7  tdesktop-1.9.3-full.tar.gz
 af8c9e8cf151b6aaa94a11b1f3f4d73c117fa25d7ba3b603c25170278bb0a99a9da10facc3b140fa0e3c2c0747a1f5bdcfb1120dfd48913a0d84f78701abb9fc  breakpad-dbd454dbe47e584571388fc3533193416bdce67f.tar.gz
 8de8c0508177da5fcac4f2dcee4d8baef4b99f74f1dca296567bc3689a6bd17a47c1c945df504abc8811b82a687010d0709503c7c32e47d2ebb1cf0e374c80c5  xdg.patch
-438d8008a3513a182ba21aa2f008ee889ff5de24e0a722ea4d690ddba98fba4e781456095801cb4f8eebbce345e86d7a5fdaf1aa8e1f7697b77f1f87b4851d91  lz4.patch
-c814f4b944c210cac34964d4261fc838fd3891892cb57d9d9c8ed09bbb317e8e8be9d635b73f720bd9a99cbb71c896b052da4851cec8e4e28ec25b586f4bb152  zlib.patch
-f8a22d356dccaf9bfcca5566ecd90c9c6db1566af1f51878cd6239d4b0c893f3c2535e2144f69dd3e19744120b417ebc744a02de185de99e9ef12599de150414  opus.patch
-0f714a1c0f0b2b83c39bd699f0b7995ee1bccd9bdf0f5b401bc92ff722837d0f500eb3a410b881ca7e3656256ee1f930c6f7a020e54119045c0539e377b8d63d  openal.patch
-f808d3c3670415b75b9569276f51f5464ced5146535104826d5736f5febabd1c7587181bb30f6876ae753618fbffa3bf5013ecd4a6e2dadd9cc4ca6ee1957215  openssl.patch
-b5ed0d2697491c1008431b596997b7c9b273772efae603d99c8539d8a678e339f9f8e01f63533ac3474c7e3a82619037a33bc25a760cf2204887caca4c521412  ffmpeg.patch
-48a6460c24f6bda5b492d26fbff99f7a9ff953e43e856e2669b25cbd6a942ae009d4dbd07462e7fdbd431662bfbd6fd8414d052b78a93bb2cd02a912d88012c7  qt.patch
-1852ac9326d73055118ab5cbbd3bf2af1d72523d12913a6378b797551d405d0f397b05d1918494a741864614c3f605bff8a5f595e8c286e46db9696b3220103e  range-v3.patch
+15e7328bdfb1ddae0357d30ded5448fb785f3ef0e148f47df8e66d5716999afb73bbc1caed21c5babd283db40017d1939066ae4d7d5989053cd41088ee7d5c91  lz4.cmake
+f53c7194e62e22e0e197599ceffb37f1d742da83402257503c8f529e00187ed59d241d7880aa410ddbeac0540dc1ec6809700cf2c94c0c41db73809c712b1624  zlib.cmake
+0149ed6db6d92ed933f83ca385d2a06d4d6a960a2768134b3967a5e0a9bd58af83ac93fe45b3033e3da6767f90fea26037f6db17ba219dbe09f8942ba4903a84  opus.cmake
+48a6f5de0a03357d5f13a065c06b279021e8ebb872ea96d59f5ccb2bc8efd5e1f2d2850dddc22cdc0da0ac53cf0eb407ca0f53eebba8f68cf51224bb624c1b23  openal.cmake
+f3c13e996b8456a79a418380c9e78c8d871f53c9da6dbe030ebb25817f232c7b511255a6c618aabc6afe6aba3b636b1058986d8fede9d06ad354bf6c1e46bb9f  openssl.cmake
+c0afecd5d75d385e4e3d3d3e1273b12afebaaec38375a72edb17cb4c17666b3c45301cb0f06806a264798909ffd15517b7ed4d698cb00aa5c2d10bd6bd6ad12a  ffmpeg.cmake
+c15a8da42d5248ee48fd3663913c010476cedd0fde86c6b133770c41ee6cdab33637732ac24bcc34d9b3a9e2a202147eed08fbfa7bffcf0ca4a2681f519a52bb  qt.cmake
+f99017a119efb1b534cece9580d2b6cf4d88c0c3285eac8ac826008eec25a4fe43c846a9e1523f5af2aec57c13cf6abc549cdd8242ce266e43c3e61928e61d2a  range-v3.cmake
+bcb1ed7ecc7ca5c0282337fad9c341d7468537d0f1ae2dc296d63c34508c9768cd7120a135fea27a752a9e8c9e6eaa223fa661f488c7f8a565d9cc2b2eab7be4  breakpad.cmake
 6062602d02e20917c06f17d12bb21bd4a94b23c2a6744a8a05c2c93d41747ba413e110edd344ecd130c28ebaf997ae46b347d239e69f5856ead42318bd5b01cd  musl-basename.patch
 3182d2da588fd50c771047550e0d4805cce404836ecc6a4f9ccc95b21c6915391ab3f4d75cd745737836d6c483eac84974659b97e9514384efd032ef33044125  updater.patch
 4fb0f0a8c0a57436a10a79d7d1a45c1045d3ac30b9437e65025a4867400b52e52b38c61d447b1392bdf2bd6b241ed25a2c73851c67e08b9198a922c22a316345  default-shared.patch
 b40c9948bab21253d54cbf6c609f82f97c80b064ddc2a5b8347b6322e26836c55a9c3eaab429a46f058bac1c7a7f57fd63979a318af13063ce9039fe29bcfd14  exotic-arch-compat.patch
 d321da9c960641cd7d8159a0f076670b366afb847607a9f05525d17e3751ddcae2f3fa8b0d5f0f4780f7831033f48ce32373104ab35f8d2762e31e1097b20188  werror-o2.patch
-838c5891084344b06fc1b140928e0fed804a8acbb8374147418094d164b5f42d84f72a0fd0941844366f5949ed73301915a78d09de7c309d128852f44cbcd8a9  breakpad-loc.patch
 835f5735d6fc52ad0a3b99f21a0a06cb310f21981a6036f4c9b76312eb947af7fa065ef7f530bcd63ee9271d293778cc8ddf098764c2878a8500aa04ee05c2b1  qt_functions.patch
 9a3e491e2b2a9ea3f15da3766a2d743bafead7ae1e6a6ca3e6e9c7352dc268221311acd73664e5452622e2bc91cc88a2a7d3b4ebe6634b4da74c54b3bde0bb7f  ppc.patch
 183767e9a291dd605797cdc46382d8cb6a73a342348a40df7d52864ea27b3aa8709808cd51c46f5e611c247229ed336cb569bed1185c4c97b03171b56bbe5653  qt-plugin-path.patch
